initil project structure bug fixes
removing dependencies from previous project

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,7 @@
   To create a production bundle, use `npm run build`.
 -->
 <script>
-    window.rfpIdParamName = 'rfpID';
-    window.rfpId = '1';
-    window.preloadedState = null;
-    window.initialState = JSON.parse('{"isVATPayer":true,"items":[{"id":"1","name":"Dell XPS 13` 2015","comment":null,"deliveryDays":0,"uom":"PCS","quantity":3.0,"cost":900.0,"total":2700.0},{"id":"2","name":"One Plus Three","comment":null,"deliveryDays":0,"uom":"PCS","quantity":1.0,"cost":400.0,"total":400.0}],"currency":"AZN"}');
+    window.initialState = null;
 
 </script>
 
