Some serious changes & improvements

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
-      It will be replaced with the URL of the `public` folder during the build.
+      It will be replaced with the URL of ~~ `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
@@ -21,7 +21,7 @@
     <title>React App</title>
 </head>
 <body>
-<div id="root"></div>
+<div id="root" style="padding:10px;"></div>
 <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
@@ -33,7 +33,6 @@
   To create a production bundle, use `npm run build`.
 -->
 <script>
-    window.initialState = null;
 
 </script>
 
