--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="%PUBLIC_URL%/semantic/semantic.min.css">
+    <link rel="stylesheet" href="style.css">
 
     <script src="%PUBLIC_URL%/jquery/jquery.min.js"> </script>
     <script src="%PUBLIC_URL%/semantic/semantic.min.js"> </script>
